# Policy-Assistant

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_services.ps1  test_all_connections.py
scripts/: generate_protos.py
services/api_gateway/: Dockerfile  pyproject.toml
services/api_gateway/api_gateway/: cli.py
services/api_gateway/api_gateway/app/: main.py
services/api_gateway/api_gateway/app/models/: chat.py  document.py  sync.py
services/api_gateway/api_gateway/app/routes/: admin.py  chat.py  upload.py  vectors.py
services/api_gateway/api_gateway/core/: dependencies.py
services/api_gateway/api_gateway/services/: chat_client.py
services/api_gateway/api_gateway/tests/: test_api.py
services/chat_service/: Dockerfile  pyproject.toml
services/chat_service/chat_service/: cli.py
services/chat_service/chat_service/app/: interfaces.py  main.py
services/chat_service/chat_service/app/adapters/: audio_converter.py  grpc_adapters.py
services/chat_service/chat_service/app/core/: pipeline.py  steps.py  transcriber.py
services/chat_service/chat_service/app/providers/: pipeline.py  stt.py
services/chat_service/chat_service/tests/: test_chat.py
services/ingestion_service/: Dockerfile  pyproject.toml
services/ingestion_service/ingestion_service/: cli.py
services/ingestion_service/ingestion_service/app/: main.py
services/llm_service/: Dockerfile  pyproject.toml
services/llm_service/llm_service/: cli.py  interfaces.py
services/llm_service/llm_service/app/: main.py
services/llm_service/llm_service/app/providers/: chain.py  chain_strategies.py
services/llm_service/llm_service/tests/: test_llm.py
services/query_service/: Dockerfile  pyproject.toml
services/query_service/query_service/: cli.py
services/query_service/query_service/app/: main.py
services/rag_service/: Dockerfile  pyproject.toml
services/rag_service/rag_service/: cli.py  interfaces.py
services/rag_service/rag_service/app/: main.py  server.py  service.py
services/rag_service/rag_service/components/: graph_retriever.py  search_engine.py
services/rag_service/rag_service/core/: dependencies.py
services/rag_service/rag_service/providers/: retrieval.py
services/rag_service/rag_service/tests/: test_rag.py
services/rag_worker/: Dockerfile  pyproject.toml
services/rag_worker/rag_worker/: cli.py  interfaces.py  worker.py
services/rag_worker/rag_worker/processors/: base.py  pdf_processor.py  text_processor.py
services/rag_worker/rag_worker/providers/: processors.py  splitter.py
services/rag_worker/rag_worker/services/: graph_processor.py  ingestion.py  reporting.py
services/rag_worker/rag_worker/tests/: test_worker.py
services/stt_service/: Dockerfile  pyproject.toml
services/stt_service/docs/: generating_protos
services/stt_service/stt_service/: __init__.py  cli.py
services/stt_service/stt_service/app/: __init__.py  main.py
services/stt_service/stt_service/app/protos/: stt.proto  stt_pb2.py  stt_pb2_grpc.py
shared/: pyproject.toml
shared/shared/: config.py  interfaces.py
shared/shared/protos/: service.proto  service_pb2.py  service_pb2_grpc.py
shared/shared/providers/: embeddings.py  llm.py  neo4j_client.py  redis.py  storage.py  vector_database.py
