[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared", "shared.*"]
