[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "pinecone-client>=6.0.0",
    "protobuf>=6.33.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared", "shared.*"]
