[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-huggingface>=1.1.0",
    "langchain-neo4j>=0.6.0",
    "langchain-openai>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "neo4j>=5.28.2",
    "pinecone",
    "protobuf>=6.33.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "fakeredis>=2.33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
