[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat_service"
version = "0.1.0"
description = "Chat service - Chat Service microservice"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2.1",
    "grpcio>=1.76.0",
    "imageio-ffmpeg>=0.6.0",
    "protobuf>=6.33.1",
    "speechrecognition>=3.14.4",
]


[project.scripts]
chat-service = "chat_service.cli:run"
  
[tool.hatch.build.targets.wheel]
packages = ["chat_service"]
