[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_service"
version = "0.1.0"
description = "LLM service - LLM Service microservice"
requires-python = ">=3.10"


[project.scripts]
llm-service = "llm_service.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_service", "llm_service.*"]
[tool.uv.sources]
shared = { workspace = true }
