[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "llm_service"
version = "0.1.0"
description = "LLM service - LLM Service microservice"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.76.0",
    "langchain-core>=1.1.1",
]


[project.scripts]
llm-service = "llm_service.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["llm_service"]