[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_service"
version = "0.1.0"
description = "RAG service - Retrieval-Augmented Generation microservice (ingestion + retrieval)"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.76.0",
    "langchain>=1.1.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.0",
    "redis>=7.1.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.5.1,<2.6",
    "torchvision>=0.20.1,<0.21",
]

[project.scripts]
rag-service = "rag_service.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_service", "rag_service.*"]

[tool.uv.sources]
shared = { workspace = true }
