[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag_worker"
version = "0.1.0"
description = "RAG worker - Retrieval-Augmented Generation worker microservice"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.1.2",
    "langchain-core>=1.1.1",
    "langchain-text-splitters>=1.0.0",
    "pypdf>=6.4.0",
    "redis>=7.1.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.5.1,<2.6",
    "torchvision>=0.20.1,<0.21",
]

[project.scripts]
rag-worker = "rag_worker.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["rag_worker"]